# panda-mcp

./: .gitignore  CLAUDE.md  README.md  lab_notebook.md  mcp-settings.example.json  pyproject.toml  requirements.txt  run.sh
calibration/: aruco_calibration.npz  depth_calibration.npz  realsense_calibration.npz  wrist_calibration.npz
camera_daemon/: __init__.py  __main__.py  client.py  server.py
camera_mcp/: README.md  __init__.py  __main__.py  controller.py  pyproject.toml  server.py
camera_viewer/: __main__.py  app.py
common/: README.md  __init__.py  calibration.py  data_collection.py  depth_calibration.py  depth_fusion.py  grounding_client.py  hailo_detector.py  manipulation.py  mcp_data_collector.py  pyproject.toml  safety.py  scene_interpreter.py  scene_viewer.py  segmentation.py  skill_logger.py  trajectory_recorder.py  vision.py
common/nudge/: __init__.py  collector.py  dataset.py  discretize.py  model.py  online_adapt.py  servo.py
common/sawm/: __init__.py  cropper.py  data_collector.py  dataset.py  model.py  monitor.py  servo.py  servo_collector.py
data/: pixel_to_robot_calib.json  sweep_points.json
depth_mcp/: __init__.py  __main__.py  phoxi_client.py  pyproject.toml  server.py
docs/: PROJECT_PAGE_OUTLINE.md  session-2026-01-20.md  training-notes.md
franka_mcp/: README.md  __init__.py  __main__.py  controller.py  gamepad.py  pyproject.toml  rt_client.py  server.py  vla_client.py  web_gamepad.py
franka_rt/: __init__.py  __main__.py  protocol.py  robot_proxy.py  server.py  servo.py
learned/: __init__.py  block_detector.py  calibration_sweep.py  data_collector.py  embedding_db.py  moondream_client.py  objsel_orchestrator.py  servo_config.json  visual_servo.py
models/: README.md  gripper_localizer.py  nudge.onnx  nudge.onnx.data  nudge_v2.onnx  nudge_v2.onnx.data
realsense_mcp/: __init__.py  __main__.py  controller.py  pyproject.toml  server.py
scripts/: benchmark_vlm_pointing.py  calibrate_camera_intrinsics.py  calibrate_depth.py  calibrate_depth_robot.py  calibrate_realsense_robot.py  calibrate_usb_camera.py  calibrate_wrist_camera.py  collect_data.py  collect_data_mcp.py  collect_nudge_data.py  convert_to_lerobot.py  convert_to_moondream_dataset.py  convert_to_objsel_dataset.py  convert_to_skill_dataset.py  deploy_grounding_server.sh  embedding_server.py  finetune_moondream.py  grounding-server.service  grounding_server.py  infer_gripper_position.py  inference_server.py  moondream_server.py  relabel_nudge_data.py  test_vlm_task.py  train_all_backbones.py  train_gripper_localizer.py  train_localizer.py  train_nudge.py  train_sawm.py  train_sawm_servo.py  visualize_dataset.py
so100_mcp/: README.md  __init__.py  __main__.py  controller.py  pyproject.toml  range_of_motion.json  server.json  server.py
systemd/: camera-daemon.service
tests/: conftest.py  test_safety.py
voice_mcp/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
