[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-mcp"
version = "0.1.0"
description = "MCP servers for robot arm control — development meta-package"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
