[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-mcp-common"
version = "0.1.0"
description = "Shared utilities for robot-mcp packages (safety, vision, calibration)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Doug Schallmoser"},
]
keywords = ["mcp", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/ratsbane/panda-mcp"
Repository = "https://github.com/ratsbane/panda-mcp"

[tool.hatch.build]
exclude = [
    "dist/",
    ".gitignore",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "common/__init__.py"
"safety.py" = "common/safety.py"
"calibration.py" = "common/calibration.py"
"manipulation.py" = "common/manipulation.py"
"vision.py" = "common/vision.py"
"scene_interpreter.py" = "common/scene_interpreter.py"
"segmentation.py" = "common/segmentation.py"
"data_collection.py" = "common/data_collection.py"
"mcp_data_collector.py" = "common/mcp_data_collector.py"
"scene_viewer.py" = "common/scene_viewer.py"
