[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-mcp-depth"
version = "0.1.0"
description = "MCP server for PhotoNeo 3D depth camera"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Doug Schallmoser"},
]
keywords = ["mcp", "robotics", "depth", "photoneo", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/ratsbane/panda-mcp"
Repository = "https://github.com/ratsbane/panda-mcp"

[project.scripts]
depth-mcp = "depth_mcp.server:main_entry"

[tool.hatch.build]
exclude = [
    "dist/",
    ".gitignore",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "depth_mcp/__init__.py"
"__main__.py" = "depth_mcp/__main__.py"
"server.py" = "depth_mcp/server.py"
"phoxi_client.py" = "depth_mcp/phoxi_client.py"
