[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-mcp-franka"
version = "0.1.0"
description = "MCP server for Franka Emika Panda robot arm control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Doug Schallmoser"},
]
keywords = ["mcp", "robotics", "franka", "panda", "cobot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "panda-python>=0.8.0",
    "numpy>=1.24.0",
    "robot-mcp-common>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ratsbane/panda-mcp"
Repository = "https://github.com/ratsbane/panda-mcp"

[project.scripts]
franka-mcp = "franka_mcp.server:main_entry"

[tool.hatch.build]
exclude = [
    "dist/",
    ".gitignore",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "franka_mcp/__init__.py"
"__main__.py" = "franka_mcp/__main__.py"
"server.py" = "franka_mcp/server.py"
"controller.py" = "franka_mcp/controller.py"
