[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-mcp-so100"
version = "0.1.0"
description = "MCP server for SO-ARM100 robot arm control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Doug Schallmoser"},
]
keywords = ["mcp", "robotics", "so-arm100", "lerobot", "servo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "feetech-servo-sdk",
]

[project.urls]
Homepage = "https://github.com/ratsbane/panda-mcp"
Repository = "https://github.com/ratsbane/panda-mcp"

[project.scripts]
so100-mcp = "so100_mcp.server:main_entry"

[tool.hatch.build]
exclude = [
    "*.json",
    "dist/",
    ".gitignore",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
# Include current directory contents as the so100_mcp package
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "so100_mcp/__init__.py"
"__main__.py" = "so100_mcp/__main__.py"
"server.py" = "so100_mcp/server.py"
"controller.py" = "so100_mcp/controller.py"
